# ducki

./: .gitignore  Cargo.toml  README.md  build.sh  config.ts  deck.json  deno.json  main.ts  types.d.ts
assets/: demo.mov
commands/cards/: add.ts  mod.ts  remove.ts  study.ts
commands/decks/: add.ts  init.ts  list.ts  mod.ts  remove.ts
src/: commands.rs  config.rs  deck.rs  main.rs  progress.rs  tui.rs  util.rs
src/commands/: add.rs  default.rs  help.rs  init.rs  list.rs  remove.rs  study.rs  tui.rs
src/commands/cards/: add.rs
src/commands/decks/: add.rs  import.rs  init.rs  list.rs  mod.rs  remove.rs  study.rs  undo.rs
src/deck/: log.rs  progress.rs
src/tui/: deck_select.rs  edit_deck.rs  init_deck.rs  study.rs
src/tui/edit_deck/: add_edit_card.rs  edit_details.rs
src/tui/init_deck/: save_deck.rs  select_description.rs  select_id.rs  select_path.rs
