[package]
name = "ducki"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["color", "suggestions", "derive"] }
cursive = "0.21.1"
cursive-hjkl = "0.2.0"
directories = "5.0.1"
inquire = "0.7.5"
rand = "0.8.5"
rs-fsrs = { version = "1.2.1", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
termion = "4.0.3"
